// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":false}}"
  style={
    Object {
      "height": 32,
      "width": "100%",
    }
  }
/>
`;

exports[`shaperound 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":16}}"
  style={
    Object {
      "height": 32,
      "width": "100%",
    }
  }
/>
`;

exports[`sizedefault 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":false}}"
  style={
    Object {
      "height": 32,
      "width": "100%",
    }
  }
/>
`;

exports[`sizelarge 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":false}}"
  style={
    Object {
      "height": 40,
      "width": "100%",
    }
  }
/>
`;

exports[`sizesmall 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":false}}"
  style={
    Object {
      "height": 24,
      "width": "100%",
    }
  }
/>
`;
